# svg-rs

./: .gitignore  COMPARISON_AND_IMPROVEMENTS.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  README_zh.md
docs/: PATH_FEATURE.md  api-reference.md  core-svg.md  examples.md  getting-started.md
docs/features/: draggable.md  math.md  path.md  shapes.md
examples/: README.md  advanced.rs  animations.rs  basic_shapes.rs  clip.rs  demo.rs  draggable.rs  enhanced_demo.rs  events.rs  feature_tests.rs  gradients.rs  grouping.rs  mask.rs  math.rs  medium_priority.rs  path.rs  polygon_polyline.rs  shapes.rs  styles.rs  test_features.rs
examples/combined/: medium_priority_combined.rs  quickstart_combined.rs
src/: draggable.rs  lib.rs  main.rs  math.rs  path.rs  shapes.rs  svg.rs
