[package]
name = "svg-rs"
version = "0.2.0"
edition = "2021"
authors = ["Aaron Tsui"]
description = "A lightweight Rust library for creating and manipulating SVG graphics, inspired by svg.js"
license = "MIT"
repository = "https://github.com/overheat/svg-rs"
homepage = "https://github.com/overheat/svg-rs"
documentation = "https://docs.rs/svg-rs"
readme = "README.md"
keywords = ["svg", "graphics", "animation", "vector", "xml"]
categories = ["graphics", "multimedia", "web-programming"]
exclude = [
    "examples/*",
    "*.svg",
    ".git*",
    "target/*"
]

[dependencies]

[features]
default = []
draggable = []
shapes = []
math = []
path = []

[[bin]]
name = "svg-rs"
path = "src/main.rs"

[lib]
name = "svg_rs"
path = "src/lib.rs"

[dev-dependencies]
